status pedido de venda

--- a/src/app/sistema/vendas/pedidos-vendas/criar-pedido-vendas/criar-pedido-vendas.component.html
+++ b/src/app/sistema/vendas/pedidos-vendas/criar-pedido-vendas/criar-pedido-vendas.component.html
@@ -385,6 +385,16 @@
                         </a>
                     </div>
 
+                    <!-- Status Pedido -->
+                    <div class="col-4 px-2 pt-4 p-0 m-0 form-floating">
+                        <select class="form-select form-select-lg h-limited px-4 py-3 rounded-15 shadow-sm text-custom-dark" type="text" placeholder="status" id="status" formControlName="statusPedido">
+                          <option value="" disabled selected>Selecione um status</option>
+                          <option value="Proposta">Proposta</option>
+                          <option value="Pedido efetuado">Pedido efetuado</option>
+                      </select>
+                        <label class="ms-2 mt-3 small text-truncate text-custom-dark">Status Pedido</label>
+                    </div>
+
                 </div>
 
                 <!-- Dados da venda -->
